2003-05-01 Tom Copeland <tom@infoether.com>
	
	* www/mail/admin/index.php: 
	Bug 323: Link to "administrate this list" was hardcoded HTTPS

2003-04-28  Reinhard Spisser	<reinhard@spisser.it>

	* common/include/utils.php:
	bug 52: Path to sendmail is hardcoded

	* www/top/index.php:
	bug 70: commented links to not-working stats pages

	* www/include/languages/German.tab: 
	fixed bug #303: Statistikien->Statistiken

	* www/include/languages/Italian.tab:
	some translations, fixes, removed double strings

2003-04-28 Tom Copeland <tom@infoether.com>

	* www/include/project_home.php: Bug #320: Developer count 
	needs to check user.status.

2003-04-25 Tom Copeland <tom@infoether.com>

	* contrib/cmd-line-prototype.tar.gz: Patch #160 - Richard's 
	command line API prototype.

2003-04-24 Tom Copeland <tom@infoether.com>

	* www/survey/admin show_results_aggregate.php: Fixed bug 315: survey a
	results were not displayed correctly in PG 7.2
	* common/tracker/Artifact.class: Fixed bug 311: double-submitting code 
	was catching similar items that were in different projects

2003-04-20  Roland Mas  <lolando@debian.org>

	* common/include/Group.class: Send new project registration,
	approval, and rejection emails in the language of the recipient
	rather than the language of the user causing the email to be sent
	(project registrator or armin approving/rejecting the project).

2003-04-09  Christian Bayle	<bayle@debian.org>

	* rewrote tarballs download in such a way that only project admins can
	download
	* reordered records in Base.tab plus some cleaning
	* added checktab.sh in tools dir to check .tab files
	* reordered records in French.tab
	* Made a beautiful table to list exixting forums in forum add
	* Added darkaqua theme from Patrick McFarland (diablod3)
	* Applied patch from Vincente Ruiz that fix Browser language selection
	if you are not logged in
	* Removed unwanted translation in admin/groupedit.php as remarked by
	Jeff Fynboh (jfynboh) in patch #290